fix #833 Bottom Elements are cut off

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-app-layout.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-app-layout.css
@@ -234,9 +234,11 @@
 
 body.dui > .dui-layout,
 body.dui > .dui-layout-body {
-    height: calc(100vh);
-    width: calc(100vw);
-    max-height: calc(100vh);
+    height: 100vh;
+    height: 100dvh;
+    width: 100vw;
+    max-height: 100vh;
+    max-height: 100dvh;
     max-width: calc(100vw);
 }
 
